--- a/app/views/pages/browser.html.erb
+++ b/app/views/pages/browser.html.erb
@@ -23,8 +23,8 @@
             </label>
             <div class="browser-list-filters">
                 <div id="orders-title" class="browser-list-header-toggle states left">
-                    <a id="order-stat-open" href="#" class="button-link selected"><i class="fa fa-arrow-circle-o-up"></i> 3 Open</a>
-                    <a id="order-stat-closed" href="#" class="button-link"><i class="fa fa-check"></i> 2 Completed</a>
+                    <a id="order-stat-open" href="#" class="button-link selected"><i class="fa fa-arrow-circle-o-up"></i> Open</a>
+                    <a id="order-stat-closed" href="#" class="button-link"><i class="fa fa-check"></i> Completed</a>
                 </div>
                 <div class="browser-list-header-toggle right">
                     <div class="left select-menu">
@@ -52,6 +52,7 @@
         </ul>
 
         <%= render "new_order_form" %>
+        <%= render "show_order_form" %>
     </div>
 
 
