--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -55,9 +55,11 @@ body {
 
 .hidden {
   display: none !important;
+  visibility: hidden;
 }
 @import "loginpage";
 @import "siteheader";
 @import "dashboard";
 @import "browser";
 @import "neworder";
+@import "showorder";
