--- a/app/views/pages/browser.html.erb
+++ b/app/views/pages/browser.html.erb
@@ -51,6 +51,7 @@
             <!--loaded dynamically by load_orders()-->
         </ul>
 
+        <%= render "error" %>
         <%= render "new_order_form" %>
         <%= render "show_order_form" %>
     </div>
