--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,7 +38,7 @@
                     </li>
                 <% end %>
                 <li class="header-nav-item">
-                    <%= link_to 'import', controller: 'pages', action: 'import' do %>
+                    <%= link_to controller: 'pages', action: 'import' do %>
                         <i class="fa fa-cog"></i>
                     <% end %>
                 </li>
