--- a/app/assets/stylesheets/_neworder.scss
+++ b/app/assets/stylesheets/_neworder.scss
@@ -1,3 +1,28 @@
+//#new-order-form {
+//  width: 100%;
+//}
+#new-order-table {
+  margin-top: 0px;
+  padding-top: 20px;
+  border-top: 1px solid #ddd;
+}
+
+#new-order-table dl.form {
+  border-top: 1px solid #ddd;
+}
+
+#new-order-table span.param-edit {
+  font-size: 15px;
+  color: #333;
+  width: 75%;
+  vertical-align: middle;
+}
+
+// ------------------------old stuff down here
+
+
+
+
 .boxed-group {
   position: relative;
   border-radius: 3px;
@@ -105,15 +130,15 @@ dl.form input[type="text"] {
   box-shadow: inset 0 1px 2px rgba(0,0,0,0.075);
 }
 
-#new-order-table {
-  margin-top: 0px;
-  padding-top: 20px;
-  border-top: 1px solid #ddd;
-}
+//#new-order-table {
+//  margin-top: 0px;
+//  padding-top: 20px;
+//  border-top: 1px solid #ddd;
+//}
 
-.param-sep {
-  width: 100%;
-//  padding: 0 10px;
-//  margin-left: -10px;
-  border-top: 1px solid #ddd;
-}
+//.param-sep {
+//  width: 100%;
+////  padding: 0 10px;
+////  margin-left: -10px;
+//  border-top: 1px solid #ddd;
+//}
