--- a/app/views/pages/_new_order_form.html.erb
+++ b/app/views/pages/_new_order_form.html.erb
@@ -1,111 +1,44 @@
-<div id="new-order-table" class="boxed-group hidden">
-    <div class="boxed-group two-thirds right">
+<div id="new-order-table" class="hidden">
+    <div class="boxed-group right">
         <h3>New order</h3>
-        <div class="boxed-group-inner clearfix">
-              <form id="new-order-params-form" class="columns">
-                  <div id="param-container" class="column">
+        <form id="new-order-form">
+            <ul class="browser-list">
 
-                      <dl id="product-name-container" class="form clearfix">
-                          <dt >
-                              <label for="product-name">Product</label>
-                          </dt>
-                          <dd >
-                              <select id="product-name-sel">
-                                  <option>ABC</option>
-                              </select>
+              <input id="product-id-holder" name="order[product_id]" type="hidden">
 
-                          </dd>
-                      </dl>
-                      <div id="params-holder">
+                <li class="browser-list-item">
+                  <span class="browser-list-cell param-title">Product</span>
+                  <span id="order-product-edit" class="browser-list-cell param-edit">
+                      <select id="product-name-sel">
+                          <option>ABC</option>
+                      </select>
+                  </span>
+               </li>
 
-                      </div>
-                  </div>
-              </form>
-                <hr class="param-sep"/>
-              <form id="new-order-form" class="columns">
-                  <input id="product-id-holder" name="order[product_id]" type="hidden">
-                  <div class="column ">
-                      <dl class="form clearfix">
-                          <dt >
-                              <label for="item-comment">Description</label>
-                          </dt>
-                          <dd >
-                              <input class="long" id="item-comment" name="order[comment]" size="30" type="text">
-                          </dd>
-                      </dl>
+                <% arr_names = [ "comment", "ordered_from", "price", "quantity", "units", "department"]
+                   arr_titles = ["Description", "Ordered from", "Price", "Quantity", "Units", "Ordering department"]
+                   for i in 0..(arr_names.size-1)
+                %>
+                      <li class="browser-list-item">
+                              <span class="browser-list-cell param-title"><%= arr_titles[i] %></span>
+                              <span class="browser-list-cell param-edit">
+                                  <input class="browser-edit-input" id="item-comment" name="order[<%= arr_names[i] %>]" size="30" type="text">
+                               </span>
+                              <!--<span class="browser-list-cell param-control"></span>-->
+                      </li>
+                <% end %>
 
-                      <dl class="form clearfix">
-                          <dt >
-                              <label for="item-provider">Ordered from</label>
-                          </dt>
-                          <dd >
-                              <input class="long" id="item-provider" name="order[ordered_from]" size="30" type="text">
-                          </dd>
-                      </dl>
+            </ul>
+            <button id="new-order-submit-button" type="submit" class="button primary">Create order</button>
+        </form>
 
-                      <dl class="form clearfix">
-                          <dt >
-                              <label for="item-price">Price</label>
-                          </dt>
-                          <dd >
-                              <input class="long" id="item-price" name="order[price]" size="30" type="text">
-                          </dd>
-                      </dl>
-
-                      <dl class="form clearfix">
-                          <dt >
-                              <label for="item-quantity">Quantity</label>
-                          </dt>
-                          <dd >
-                              <input class="long" id="item-quantity" name="order[quantity]" size="30" type="text">
-                          </dd>
-                      </dl>
-
-                      <dl class="form clearfix">
-                          <dt >
-                              <label for="item-units">Units</label>
-                          </dt>
-                          <dd >
-                              <input class="long" id="item-units" name="order[units]" size="30" type="text">
-                          </dd>
-                      </dl>
-
-                      <dl class="form clearfix">
-                          <dt >
-                              <label for="item-department">Ordering department</label>
-                          </dt>
-                          <dd >
-                              <input class="long" id="item-department" name="order[department]" size="30" type="text">
-                          </dd>
-                      </dl>
-
-
-
-                      <dl class="form clearfix">
-                          <dt >
-                              <label for="item-url">Reference URL</label>
-                          </dt>
-                          <dd >
-                              <input class="long" id="item-url" name="order[url]" size="30" type="text">
-                          </dd>
-                      </dl>
-
-                      <p>
-                          <button id="new-order-submit-button" type="submit" class="button primary">Create order</button>
-                      </p>
-                      </dl>
-                  </div>
-              </form>
-        </div>
         <div id="param-template" class="hidden">
-            <dl class="form dynamic clearfix">
-                <dt >
-                    <label for="item-tmp"></label>
-                </dt>
-                <dd >
-                    <input class="long" id="item-tmp" size="30" type="text">
-                </dd>
-            </dl>
+            <li class="browser-list-item">
+                <span class="browser-list-cell param-title"></span>
+                <span class="browser-list-cell param-edit">
+                    <input class="browser-edit-input" id="item-tmp" size="30" type="text">
+                </span>
+            </li>
         </div>
     </div>
 </div>
