--- a/app/views/pages/_show_order_form.html.erb
+++ b/app/views/pages/_show_order_form.html.erb
@@ -7,8 +7,8 @@
 
             <!--<div id="show-order-form" class="">-->
         <ul class="browser-list">
-        <% arr_names = ["product", "comment", "ordered_from", "price", "quantity", "units", "department"]
-           arr_titles = ["Product", "Description", "Ordered from", "Price", "Quantity", "Units", "Ordering department"]
+        <% arr_names = ["product", "comment", "ordered_from", "price", "quantity", "units", "department", "url"]
+           arr_titles = ["Product", "Description", "Ordered from", "Price", "Quantity", "Units", "Ordering department", "Order URL"]
            for i in 0..(arr_names.size-1)
         %>
             <li class="browser-list-item">
@@ -25,14 +25,14 @@
 
             </li>
         <% end %>
-            <li class="browser-list-item">
-                <span class="browser-list-cell param-title">Reference URL</span>
-                <a id="order-url-txt" class="browser-list-cell" target="_blank"></a>
-                <span id="order-url-button" class="browser-list-cell param-control">
-                    <div class="edit-butt right"><span><span class="fa fa-pencil"></span> Edit</span></div>
-                    <div class="control-butt right hidden"><button class="button cancel">Cancel</button><button class="button primary">Save</button></div>
-                </span>
-            </li>
+            <!--<li class="browser-list-item">-->
+                <!--<span class="browser-list-cell param-title">Reference URL</span>-->
+                <!--<a id="order-url-txt" class="browser-list-cell" target="_blank"></a>-->
+                <!--<span id="order-url-button" class="browser-list-cell param-control">-->
+                    <!--<div class="edit-butt right"><span><span class="fa fa-pencil"></span> Edit</span></div>-->
+                    <!--<div class="control-butt right hidden"><button class="button cancel">Cancel</button><button class="button primary">Save</button></div>-->
+                <!--</span>-->
+            <!--</li>-->
 
         </ul>
     </div>
