Dashboard infinite scrolling

--- a/app/assets/stylesheets/_dashboard.scss
+++ b/app/assets/stylesheets/_dashboard.scss
@@ -130,3 +130,8 @@
   text-decoration: underline;
   background-color: #fff;
 }
+
+// otherwise half of the spinner is not visible
+#activity-list div.progress-sign {
+  padding-bottom: 30px;
+}
