--- a/app/assets/stylesheets/_browser.scss
+++ b/app/assets/stylesheets/_browser.scss
@@ -155,7 +155,7 @@
   float: left;
   width: 30px;
   padding: 12px 10px 12px 1px;
-  margin-right: 5px;
+//  margin-right: 5px;
   //  margin-left: -1px;
   text-align: center;
 }
