--- a/app/views/pages/_error.html.erb
+++ b/app/views/pages/_error.html.erb
@@ -1,3 +1,4 @@
 <div id="error-message" class="error-box hidden">
     <h3>An error occured, contact admin the larklims@larkbio.com. <a id="error-back-button" href="/pages/browser">Click to go back.</a></h3>
+    <span class="msg"></span>
 </div>
