--- a/app/assets/stylesheets/_browser.scss
+++ b/app/assets/stylesheets/_browser.scss
@@ -251,3 +251,16 @@ a.browser-list-cell-title-link {
   color: $hover_color;
   text-decoration: none;
 }
+
+// paging for orders
+
+#paging-row a {
+  text-decoration: none;
+  font-weight: bold;
+}
+
+#paging-row a:hover {
+  background-color: transparent;
+  color: $hover_color !important;
+  text-decoration: none;
+}
