--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -7,6 +7,7 @@
       <th>Email</th>
       <th>Password</th>
       <th>Admin</th>
+      <th>Active</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -18,8 +19,10 @@
         <td><%= user.email %></td>
         <td><%= user.password %></td>
         <td><%= user.admin %></td>
+        <td><%= user.active %></td>
         <td><%= link_to 'Show', user %></td>
         <td><%= link_to 'Edit', edit_user_path(user) %></td>
+        <td><%= link_to 'Activate', activate_user_path(user) %></td>
         <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
