--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -20,5 +20,13 @@
   <%= @user.admin %>
 </p>
 
+<p>
+  <strong>Active:</strong>
+  <%= @user.active %>
+</p>
+
 <%= link_to 'Edit', edit_user_path(@user) %> |
+<% if current_user.admin? %>
+    <%= link_to 'Activate', activate_user_path(@user) %> |
+<% end %>
 <%= link_to 'Back', users_path %>
