created_by filter for order listing

--- a/app/views/pages/browser.html.erb
+++ b/app/views/pages/browser.html.erb
@@ -49,6 +49,9 @@
                 <div id="browser-products-header" class="browser-list-header-toggle hidden">
                     <a class="button-link selected">Products</a>
                 </div>
+                <div id="browser-users-header" class="browser-list-header-toggle hidden">
+                    <a class="button-link selected">Users</a>
+                </div>
             </div>
         </div>
         <ul id="orders-table" class="browser-list">
