--- a/app/views/pages/_show_order_form.html.erb
+++ b/app/views/pages/_show_order_form.html.erb
@@ -1,3 +1,38 @@
+<div id="close-order-table" class="hidden">
+    <input id="order-id-to-close" class="order-id" type="hidden" >
+    <div class="boxed-group right">
+        <h3>Complete order</h3>
+
+        <ul class="browser-list">
+            <form id="close-order-form">
+                <input type="hidden" name="order[status]" value="1">
+                <li class="browser-list-item">
+                    <span class="browser-list-cell param-title">Place</span>
+                    <span class="browser-list-cell param-edit">
+                      <input class="browser-edit-input" id="item-place" name="order[place]" size="30" type="text">
+                   </span>
+                    <span class="browser-list-cell param-control"></span>
+                </li>
+                <li class="browser-list-item">
+                    <span class="browser-list-cell param-title">Catalogue number</span>
+                    <span class="browser-list-cell param-edit">
+                      <input class="browser-edit-input" id="item-catalog_number" name="order[catalog_number]" size="30" type="text">
+                   </span>
+                    <span class="browser-list-cell param-control"></span>
+                </li>
+                <li class="browser-list-item">
+                    <span class="browser-list-cell param-title">Arrival date</span>
+                    <span class="browser-list-cell param-edit">
+                      <input class="browser-edit-input" id="item-arrival_date" name="order[arrival_date]" size="30" type="text">
+                   </span>
+                    <span class="browser-list-cell param-control"></span>
+                </li>
+            </form>
+        </ul>
+        <button id="close-order-submit-button" type="submit" class="button primary right">Complete order</button>
+    </div>
+</div>
+
 <div id="show-order-table" class="hidden">
     <input class="order-id" type="hidden" >
     <div class="boxed-group right">
@@ -7,8 +42,8 @@
 
             <!--<div id="show-order-form" class="">-->
         <ul class="browser-list">
-        <% arr_names = ["product", "comment", "ordered_from", "price", "quantity", "units", "department", "url"]
-           arr_titles = ["Product", "Description", "Ordered from", "Price", "Quantity", "Units", "Ordering department", "Order URL"]
+        <% arr_names = ["product", "comment", "place", "catalog_number", "arrival_date", "ordered_from", "price", "quantity", "units", "department", "url"]
+           arr_titles = ["Product", "Description", "Place", "Catalogue number", "Arrival date", "Ordered from", "Price", "Quantity", "Units", "Ordering department", "Order URL"]
            for i in 0..(arr_names.size-1)
         %>
             <li class="browser-list-item">
