--- a/app/assets/stylesheets/_loginpage.scss
+++ b/app/assets/stylesheets/_loginpage.scss
@@ -32,6 +32,11 @@
   margin-left: 40px;
   padding-top: 50px;
 }
+#form-signin> a{
+  color: #4183c4;
+  text-decoration: none;
+  background-color: #202021;
+}
 
 dl.form-si {
   position: relative;
