--- a/app/views/pages/_show_order_form.html.erb
+++ b/app/views/pages/_show_order_form.html.erb
@@ -42,8 +42,8 @@
 
             <!--<div id="show-order-form" class="">-->
         <ul class="browser-list">
-        <% arr_names = ["product", "comment", "place", "catalog_number", "arrival_date", "ordered_from", "price", "quantity", "units", "department", "url"]
-           arr_titles = ["Product", "Description", "Place", "Catalogue number", "Arrival date", "Ordered from", "Price", "Quantity", "Units", "Ordering department", "Order URL"]
+        <% arr_names = ["product", "comment", "place", "catalog_number", "order_date", "arrival_date", "ordered_from", "price", "quantity", "units", "department", "url"]
+           arr_titles = ["Product", "Order name", "Place", "Catalogue number", "Order date", "Arrival date", "Ordered from", "Price", "Quantity", "Units", "Ordering department", "Order URL"]
            for i in 0..(arr_names.size-1)
         %>
             <li class="browser-list-item">
