--- a/app/views/pages/browser.html.erb
+++ b/app/views/pages/browser.html.erb
@@ -140,7 +140,7 @@
                     </div>
                 </label>
                 <div class="browser-list-cell">
-                    <a class="browser-list-cell-title-link" href="#"></a>
+                    <span class="browser-list-cell-title-link"></span>
                     <div class="browser-meta">
                         <span></span>
                     </div>
