Bugfix - add note and contact

--- a/app/views/pages/_new_order_form.html.erb
+++ b/app/views/pages/_new_order_form.html.erb
@@ -15,8 +15,8 @@
                </li>
 
                 <input id="product-id-holder" name="order[product_id]" type="hidden">
-                <% arr_names = [ "comment", "ordered_from", "price", "quantity", "units", "department", "url"]
-                   arr_titles = ["Order name", "Ordered from", "Price", "Quantity", "Units", "Ordering department", "URL"]
+                <% arr_names = [ "comment", "ordered_from", "price", "quantity", "units", "department", "url", "contact", "note"]
+                   arr_titles = ["Order name", "Ordered from", "Price", "Quantity", "Units", "Ordering department", "URL", "Contact", "Note"]
                    for i in 0..(arr_names.size-1)
                 %>
                       <li class="browser-list-item">
