--- a/app/views/activities/index.html.erb
+++ b/app/views/activities/index.html.erb
@@ -1,7 +1,8 @@
 <table>
     <tr>
     <th>id</th>
-    <th>date</th>
+    <th>odate</th>
+    <th>adate</th>
     <th>status</th>
     <th>desc</th>
     </tr>
@@ -9,7 +10,8 @@
 
         <tr>
             <td><%= a[:order_id] %></td>
-            <td><%= a[:date] %></td>
+            <td><%= a[:odate] %></td>
+            <td><%= a[:adate] %></td>
             <td><%= a[:status] %></td>
             <td><%= a[:activity_title].html_safe %></td>
         </tr>
