--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -15,6 +15,8 @@
       <th>Status</th>
       <th>Arrival date</th>
       <th>Place</th>
+      <th>Note</th>
+      <th>Contact</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -34,6 +36,8 @@
         <td><%= order.status %></td>
         <td><%= order.arrival_date %></td>
         <td><%= order.place %></td>
+        <td><%= order.note %></td>
+        <td><%= order.contact %></td>
         <td><%= link_to 'Show', order %></td>
         <td><%= link_to 'Edit', edit_order_path(order) %></td>
         <td><%= link_to 'Destroy', order, method: :delete, data: { confirm: 'Are you sure?' } %></td>
